style.css
/* ... */
@keyframes rainbow-text {
	0%,100%{color:#e87d7d}2%{color:#e88a7d}4%{color:#e8977d}6%{color:#e8a47d}8%{color:#e8b07d}
	10%{color:#e8bd7d}12%{color:#e8ca7d}14%{color:#e8d77d}16%{color:#e8e47d}18%{color:#dfe87d}
	20%{color:#d3e87d}22%{color:#c6e87d}24%{color:#b9e87d}26%{color:#ace87d}28%{color:#9fe87d}
	30%{color:#92e87d}32%{color:#86e87d}34%{color:#7de881}36%{color:#7de88e}38%{color:#7de89b}
	40%{color:#7de8a8}42%{color:#7de8b5}44%{color:#7de8c1}46%{color:#7de8ce}48%{color:#7de8db}
	50%{color:#7de8e8}52%{color:#7ddbe8}54%{color:#7dcee8}56%{color:#7dc1e8}58%{color:#7db5e8}
	60%{color:#7da8e8}62%{color:#7d9be8}64%{color:#7d8ee8}66%{color:#7d81e8}68%{color:#867de8}
	70%{color:#927de8}72%{color:#9f7de8}74%{color:#ac7de8}76%{color:#b97de8}78%{color:#c67de8}
	80%{color:#d37de8}82%{color:#df7de8}84%{color:#e87de4}86%{color:#e87dd7}88%{color:#e87dca}
	90%{color:#e87dbd}92%{color:#e87db0}94%{color:#e87da4}96%{color:#e87d97}98%{color:#e87d8a}
}
@keyframes tilt-shake {
	0% { transform: rotate(0deg) scale(1.1); }
	25% { transform: rotate(5deg) scale(1.1); }
	50% { transform: rotate(0eg) scale(1.1); }
	75% { transform: rotate(-5deg) scale(1.1); }
	100% { transform: rotate(0deg) scale(1.1); }
}
.rainbow-text {
	animation: rainbow-text 5s infinite;
}
.rainbow-border {
	animation: rainbow-border 3s infinite;
}
.rainbow-glow {
	animation: text-glow 1s ease-in-out infinite alternate;
}
.please-click {
	animation: pulse 2s infinite, rainbow-border 3s infinite;
}
.please-click:hover {
	animation: rainbow-border 3s infinite, tilt-shake 0.25s linear infinite;
	filter: saturate(1.5) brightness(1.5);
}

#out #maincontent {
	height: 60%;
	transition: height .5s;
}
#out #more {
	position: absolute;
	left: 0;
	right: 0;
	height: 100%;
	display: block;
	z-index: 20;
	display: flex;
	align-items: stretch;
	flex-direction: column;
	visibility: visible;
}
#more {
	display: flex;
	visibility: hidden;
	overflow: auto;
	touch-action: pan-y;
}
#more * {
	touch-action: pan-y;
}
#out #closebtn {
	display: none;
}
#out #more #spaceFiller {
	display: block;
	height: 60vh;
	width: 100%;
	flex-shrink: 0;
}

#spaceFiller {
	height: 100vh;
	transition: .5s height;
}

/* Posts */
#postsFrame {
	border: none;
}
#contents {
	background: #dae0e6;
	width: 100%;
	flex: 1;
	left: 0px;
	bottom: 0px;
	padding: 15px 30px 30px 30px;
	overflow: visible;
	min-height: max-content;
}
r-post, .post {
	border: 1px #ccc solid;
	border-radius: 4px;
	background: #fff;
	margin: 0 auto;
	max-width: 640px;
	min-width: 250px;
	padding: 8px 16px;
	padding-left: 48px;
	margin-bottom: 15px;
	display: flex;
	gap: 10px;
	color: #aaa;
	position: relative;
}
r-post[novotes="true"], .post[novotes="true"] {
	padding-left: 16px;
	min-height: auto;
}
r-post .hider {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #8080804d;
	backdrop-filter: blur(8px);
	color: black;
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: pointer;
}
r-post .body, .post .body {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	margin: 2px 0;
	row-gap: 4px;
}
r-post .header, .post .header {
	display: flex;
	column-gap: 6px;
}
r-post > .cover-image, .post > .cover-image {
	width: 40px;
	height: 40px;
}
r-post .main > .description, .post .main > .description {
	white-space: pre-wrap;
}
r-post .main > .title, .post .main > .title {
	color: black;
}
/* main.authored - Community (non-system) posts */
r-post .main.authored, .post .main.authored {
	display: flex;
	flex-direction: column;
	row-gap: 4px;
}
r-post .main.authored > .title, .post .main.authored > .title {
	text-decoration: underline;
}
r-post .main.authored > .description, .post .main.authored > .description {
	color: black;
}
r-post > r-clipboard-copy, .post > r-clipboard-copy {
	align-self: center;
}
/* r-post only */
r-post {
	min-height: 76px;
}
r-post .author-container {
	display: flex;
	column-gap: 4px;
	align-items: center;
	font-weight: lighter;
}
r-post .author-container > *, r-post .author-container > a > span {
	font-size: 12px;
	color: #aaa;
	margin-bottom: 8px;
}
r-post .author-image {
	border-radius: 100%;
	padding: 2px;
	border: 1px solid lightgrey;
}
r-post .author-name {
	text-decoration: underline;
	position: relative;
}
r-votes, .r-votes {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 40px;
	background: #f8f9fa;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 4px;
}
r-votes > svg {
	fill: #888a8c;
	border-radius: 2px;
	padding: 3px;
	min-width: 24px;
	min-height: 24px;
	cursor: pointer;
}
r-votes > svg:hover {
	background: #1a1a1b1a;
}
r-votes > svg:hover, r-votes > svg.voted {
	fill: #cc3700;
}
r-user-tooltip {
	position: absolute;
	background: white;
	width: max-content;
	height: max-content;
	z-index: 1;
	top: calc(100% + 4px);
	left: 0;
	border-radius: 4px;
	box-shadow: 0px 2px 4px grey;
	color: black;
	padding: 8px;
	display: flex;
	flex-direction: column;
	row-gap: 4px;
}
r-user-tooltip::before {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 4px;
	background: linear-gradient(to right, #7b71ef, #3d6dde);
	content: "";
	border-radius: 4px 4px 0px 0px;	
}
r-user-tooltip > hr {
	opacity: 0.2;
}
r-user-tooltip > span {
	color: #aaa;
	font-size: 12px;
}
.user-tooltip-header {
	display: flex;
	align-items: center;
	column-gap: 4px;
}
.user-tooltip-grid {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: auto min-content;
	column-gap: 2px;
	flex-grow: 1;
}
.user-tooltip-grid > span {
	color: #aaa;
}
r-clipboard-copy {
	position: relative;
	height: 30px;
	width: 30px;
}
r-clipboard-copy .copy-status {
	opacity: 0;
	position: absolute;
	left: 0;
	transform: translate(-100%, -50%);
	min-width: max-content;
	top: 50%;
}
r-post-contents .contents-album {
	height: 360px;
	border-radius: 16px;
	overflow: clip;
	display: grid;
	grid-gap: 2px;
	border-radius: 4px;
}
/* ... */

